--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,6 @@
     "axios": "^1.3.5",
     "lodash": "^4.17.21",
     "moment-timezone": "^0.5.43",
-    "prettier": "^2.8.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
@@ -30,6 +29,8 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
+    "eslint": "^8.46.0",
+    "prettier": "3.0.1",
     "vite": "^4.2.0"
   }
 }
