--- a/client/.prettierrc.json
+++ b/client/.prettierrc.json
@@ -2,5 +2,7 @@
   "tabWidth": 2,
   "semi": true,
   "singleQuote": true,
-  "arrowParens": "avoid"
+  "arrowParens": "avoid",
+  "bracketSpacing": true,
+  "printWidth": 120
 }
