--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview",
     "lint": "eslint ./ --ignore-path .gitignore",
     "lint:fix": "npm run lint -- --fix",
-    "format": "prettier --write \"{,!(node_modules)/**/}*.jsx\""
+    "format": "npx prettier --write ."
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.18",
