--- a/client/.prettierrc.json
+++ b/client/.prettierrc.json
@@ -1,8 +1,10 @@
 {
-  "tabWidth": 2,
-  "semi": true,
-  "singleQuote": true,
   "arrowParens": "avoid",
   "bracketSpacing": true,
-  "printWidth": 120
+  "jsxSingleQuote": true,
+  "printWidth": 120,
+  "quoteProps": "as-needed",
+  "semi": true,
+  "singleQuote": true,
+  "tabWidth": 2
 }
