--- a/client/package.json
+++ b/client/package.json
@@ -12,25 +12,25 @@
     "format": "npx prettier --write ."
   },
   "dependencies": {
-    "@chakra-ui/icons": "^2.0.18",
-    "@chakra-ui/react": "^2.5.5",
-    "@chakra-ui/theme-tools": "^2.0.17",
-    "@monaco-editor/react": "^4.5.0",
-    "axios": "^1.3.5",
+    "@chakra-ui/icons": "^2.2.4",
+    "@chakra-ui/react": "^3.23.0",
+    "@chakra-ui/theme-tools": "^2.2.6",
+    "@monaco-editor/react": "^4.7.0",
+    "axios": "^1.11.0",
     "lodash": "^4.17.21",
-    "moment-timezone": "^0.5.43",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.43.9",
-    "react-icons": "^4.8.0",
-    "react-router-dom": "^6.10.0"
+    "moment-timezone": "^0.6.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-hook-form": "^7.61.1",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.7.1"
   },
   "devDependencies": {
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@vitejs/plugin-react": "^3.1.0",
-    "eslint": "^8.46.0",
-    "prettier": "3.0.1",
-    "vite": "^4.2.0"
+    "@types/react": "^19.1.9",
+    "@types/react-dom": "^19.1.7",
+    "@vitejs/plugin-react": "^4.7.0",
+    "eslint": "^9.32.0",
+    "prettier": "^3.6.2",
+    "vite": "^7.0.6"
   }
 }
