--- a/client/package.json
+++ b/client/package.json
@@ -11,22 +11,24 @@
     "prettier": "prettier --write ."
   },
   "dependencies": {
-    "@chakra-ui/icons": "^2.2.4",
-    "@chakra-ui/react": "^3.23.0",
-    "@chakra-ui/theme-tools": "^2.2.6",
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "framer-motion": "^10.16.16",
     "@monaco-editor/react": "^4.7.0",
     "axios": "^1.11.0",
     "lodash": "^4.17.21",
     "moment-timezone": "^0.6.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.61.1",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.7.1"
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
-    "@types/react": "^19.1.9",
-    "@types/react-dom": "^19.1.7",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.7.0",
     "eslint": "^9.32.0",
     "prettier": "^3.6.2",
